<resources>
    <string name="app_name">MVPApplicationJava</string>
    <string name="error_something_wrong">Something Is wrong.</string>
    <string name="username_mandatory">User Name (*)</string>
    <string name="user_name">User Name</string>
    <string name="full_name">Full Name (*)</string>
    <string name="email">Email (*)</string>
    <string name="password">Password</string>
    <string name="password_mandatory">Password (*)</string>
    <string name="confirm_password">Confirm Password (*)</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="register_successfully_msg">Register Successfully!\n Please Login</string>
    <string name="error_full_name">Full Name is empty.</string>
    <string name="error_user_id">User Id is empty.</string>
    <string name="error_email">Email is empty.</string>
    <string name="error_password_empty">Password is empty.</string>
    <string name="error_confirm_password_empty">Confirm password is empty.</string>
    <string name="error_mobile_number_empty">Mobile Number is empty.</string>
    <string name="error_address_empty">Address is empty.</string>
    <string name="error_match_password">Password does\'t match.</string>
    <string name="error_user_already_exist">User is already exist on DB please change USER ID</string>
    <string name="user_login">User Login</string>
    <string name="user_login_successfully">User Login Successfully.</string>
    <string name="error_invalid_user">Invalid Credential</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="already_nhave_an_naccount">Already \nhave an \nAccount?</string>
    <string name="login_screen_logo">Login Screen Logo</string>
    <string name="here_s_nyour_first_nstep_with_nus">Here’s\nyour first\nstep with \nus!</string>
    <string name="register_page_back_button_image">Register Page Back Button Image</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_page_image">Register page Image</string>
    <string name="error">\"Error : \"</string>
    <string name="please_enter_location">Please Enter Location.</string>
    <string name="pin_code">Pin Code</string>
    <string name="search">Search  :</string>
    <string name="dashboard">Dashboard</string>
    <string name="post_office_image">post office image</string>
    <string name="click_on_search_icon_to_search_post_office_detail_by_pin_code">click on search icon to search post office detail by Pin code</string>
    <string name="last_update">Update on: </string>
    <string name="humidity">Humidity : </string>
    <string name="search_weather_according_to_city">Search weather according to City</string>
    <string name="internet_msg">Please check internet connection retry to search.</string>
    <string name="internet_title">Internet Available!</string>
    <string name="enter_location">Enter Location</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="warning">Warning!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure you want to exit?</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="slide_image">Slide Image</string>
    <string name="weather">Weather</string>
    <string name="celsius"><sup> °C</sup></string>
    <string name="fahrenheit"><sup> °F</sup></string>
    <string name="last_updated">Last Updated</string>
    <string name="feel_like">Feel Like</string>
    <string name="temperature_in_fahrenheit">Temperature in Fahrenheit</string>
    <string name="no_search_data">No Search Data</string>
    <string name="type_location">Type Location</string>
    <string name="timer">Timer</string>
    <string name="timer_complete">Timer Completed!</string>

</resources>