<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    tools:context=".ui.register.RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/label_tv"
                style="@style/viewParent.headerText.NoMode"
                android:fontFamily="@font/aladin"
                android:text="@string/here_s_nyour_first_nstep_with_nus"
                android:textColor="@color/whiteTextColor"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.486" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_login_hero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_tv"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/register_page_image" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fullNameTextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fullName"
                            style="@style/modifiedEditText"
                            android:inputType="textPersonName" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/userNameTextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_mandatory"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:layout_constraintTop_toBottomOf="@+id/fullNameTextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            style="@style/modifiedEditText"
                            android:inputType="textPersonName" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailTextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:layout_constraintTop_toBottomOf="@+id/userNameTextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_mandatory"
                        app:errorEnabled="true"
                        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            style="@style/modifiedEditText"
                            android:inputType="textPassword" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirmPasswordTextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        app:errorEnabled="true"
                        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirmPassword"
                            style="@style/modifiedEditText"
                            android:inputType="textPassword"
                            app:passwordToggleEnabled="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/mobileTextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile"
                        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mobileNo"
                            style="@style/modifiedEditText"
                            android:inputType="number"
                            app:passwordToggleEnabled="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/addressTextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/address"
                        app:layout_constraintTop_toBottomOf="@+id/mobileTextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/address"
                            style="@style/modifiedEditText"
                            android:inputType="textPostalAddress|textMultiLine"
                            android:maxLines="4"
                            android:minLines="4"
                            app:passwordToggleEnabled="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:fontFamily="@font/alegreya_sc"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/already_ac_tv"
        style="@style/parent"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold"
        android:fontFamily="@font/aladin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />


    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/register_page_back_button_image"
        android:src="@drawable/ic_back_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>